[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tools"
version = "0.1.0"
description = "Small collection of CLI tools"
# readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "python-dotenv",
  "openai-whisper",
  "openai",
]

[project.scripts]
video2txt = "ai_tools.cli.video2txt:main"

[tool.setuptools.packages]
find = {}